--- a/Mathématiques 3as/MT_3AS_C.html
+++ b/Mathématiques 3as/MT_3AS_C.html
@@ -77,8 +77,60 @@
                 <hr>
                 <div class="text_Cour">
                     <div>
-                        <p>الدوال العددية (الاشتقاقية و الاستمرارية)</p>
+                        <p>الدوال العددية</p>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Cour5.pdf">
+                        <p>ملخص حول الدوال العددية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Cour6.pdf">
+                        <p>ملخص الدوال العددية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <!--<a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>النهايات</p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Cour4.pdf">
+                        <p>طريقة حساب النهايات باستعمال العدد المشتق</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <!--<a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>الاستمرارية/p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Cour2.pdf">
+                        <p>ملخص درس النهايات والاستمرارية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <!--<a href="">
+                        <p></p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>-->
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>الاشتقاقية</p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -86,24 +138,8 @@
                         <p>ملخص درس الاشتقاقية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
-                    <a href="Cours/Ch1/Cour2.pdf">
-                        <p>ملخص درس النهايات والاستمرارية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>
                     <a href="Cours/Ch1/Cour3.pdf">
                         <p>قواعد الاشتقاق مرفق بالأمثلة</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>
-                    <a href="Cours/Ch1/Cour4.pdf">
-                        <p>طريقة حساب النهايات باستعمال العدد المشتق</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>
-                    <a href="Cours/Ch1/Cour5.pdf">
-                        <p>ملخص حول الدوال العددية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>
-                    <a href="Cours/Ch1/Cour6.pdf">
-                        <p>ملخص الدوال العددية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
                     <!--<a href="">
@@ -120,6 +156,14 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch2/Cour5.pdf">
+                        <p>ملخص الدالة الأسية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Cour6.pdf">
+                        <p>ملخص الدالة اللوغاريتمية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <a href="Cours/Ch2/Cour1.pdf">
                         <p>كتاب الدوال الأسية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -148,14 +192,6 @@
                         <p>ملخص+71 تمرين في الدوال اللوغاريتمية</p>                 
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
-                    <a href="Cours/Ch2/Cour5.pdf">
-                        <p>ملخص الدالة الأسية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>
-                    <a href="Cours/Ch2/Cour6.pdf">
-                        <p>ملخص الدالة اللوغاريتمية</p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>
                     <a href="Cours/Ch2/Cour7.pdf">
                         <p>جدول يلخص الدالة الأسية واللوغاريتمية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -169,29 +205,6 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>-->
                 </div>
-                <hr>
-
-                <div class="text_Cour">
-                    <div>
-                        <p>الدوال العددية (النهايات)</p>
-                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                    </div>
-                </div>
-                <div class="pdf_Cour">
-                    <!--<a href="">
-                        <p></p>                   
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>-->
-                </div>
-                <hr>
-
-                <div class="text_Cour">
-                    <div>
-                        <p>التزايد المقارن ودراسة الدوال</p>
-                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                    </div>
-                </div>
-                
                 <div class="text_Cour">
                     <div>
                         <p>مسائل شاملة مع الحل في الدوال</p>
