--- a/Physique 3as/PH_3AS_C.html
+++ b/Physique 3as/PH_3AS_C.html
@@ -82,6 +82,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch1C1.pdf">
+                        <p>ملخص حول وحدة المتابعة الزمنية لتحول كيميائي</p>                 
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -96,6 +100,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch2C1.pdf">
+                        <p>ملخص حول وحدة تطور جملة ميكانيكية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -110,6 +118,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch3C1.pdf">
+                        <p>ملخص حول وحدة دراسة ظواهر كهربائية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -124,6 +136,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch4C1.pdf">
+                        <p>ملخص حول وحدة تطور جملة كيميائية نحو حالة التوازن</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -138,6 +154,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch5C1.pdf">
+                        <p>ملخص حول وحدة التحولات النووية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -152,6 +172,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Cours/Ch6C1.pdf">
+                        <p>ملخص حول وحدة مراقبة تطور جملة كيميائية</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
