--- a/Physique 3as/PH_3AS_C.html
+++ b/Physique 3as/PH_3AS_C.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="pdf_Cour">
                     <a href="Cours/Ch3C1.pdf">
-                        <p>ملخص حول وحدة دراسة ظواهر كهربائية</p>                   
+                        <p>ملخص حول وحدة دراسة الظواهر الكهربائية</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
                     <!--<a href="">
