--- a/Mathématiques 2as/Ps.html
+++ b/Mathématiques 2as/Ps.html
@@ -13,7 +13,7 @@
  
   <div class="wrapper">
     <label for="toggle">
-		<a href="Home.html">
+		<a href="../Home.html">
 			<i class="cancel-icon fas fa-times"></i>
 		</a>
     </label>
