--- a/Physique 3as/PH_3AS_SDC.html
+++ b/Physique 3as/PH_3AS_SDC.html
@@ -182,14 +182,14 @@
             </ul>
             <ul class="box">
               <li class="link_name">2ème Année Secondaire</li>
-              <li><a href="../Génie Electrique 2as/GE_2AS_C.html">Génie Electrique</a></li>
-              <li><a href="../Mathématiques 2as/MT_2AS_C.html">Mathématiques</a></li>
+              <li><a href="../Génie Electrique 2as/Ps.html">Génie Electrique</a></li>
+              <li><a href="../Mathématiques 2as/Ps.html">Mathématiques</a></li>
               <li><a href="../Physique 2as/PH_2AS_C.html">Physique</a></li>
             </ul>
             <ul class="box">
               <li class="link_name">3ème Année Secondaire</li>
-              <li><a href="../Génie Electrique 3as/GE_3AS_C.html">Génie Electrique</a></li>
-              <li><a href="../Mathématiques 3as/MT_3AS_C.html">Mathématiques</a></li>
+              <li><a href="../Génie Electrique 3as/Ps.html">Génie Electrique</a></li>
+              <li><a href="../Mathématiques 3as/Ps.html">Mathématiques</a></li>
               <li><a href="../Physique 3as/PH_3AS_C.html">Physique</a></li>
             </ul>
           </div>
