--- a/Génie Electrique 2as/GE_2AS_SE.html
+++ b/Génie Electrique 2as/GE_2AS_SE.html
@@ -119,14 +119,14 @@
             <ul class="box">
               <li class="link_name">2ème Année Secondaire</li>
               <li><a href="../Génie Electrique 2as/GE_2AS_C.html">Génie Electrique</a></li>
-              <li><a href="../Mathématiques 2as/MT_2AS_C.html">Mathématiques</a></li>
+              <li><a href="../Mathématiques 2as/Ph.html">Mathématiques</a></li>
               <li><a href="../Physique 2as/PH_2AS_C.html">Physique</a></li>
             </ul>
             <ul class="box">
               <li class="link_name">3ème Année Secondaire</li>
-              <li><a href="../Génie Electrique 3as/GE_3AS_C.html">Génie Electrique</a></li>
-              <li><a href="../Mathématiques 3as/MT_3AS_C.html">Mathématiques</a></li>
-              <li><a href="../Physique 3as/PH_3AS_C.html">Physique</a></li>
+              <li><a href="../Génie Electrique 3as/Ph.html">Génie Electrique</a></li>
+              <li><a href="../Mathématiques 3as/Ph.html">Mathématiques</a></li>
+              <li><a href="../Physique 3as/Ph.html">Physique</a></li>
             </ul>
           </div>
         </div>
