--- a/Physique 3as/Ps.html
+++ b/Physique 3as/Ps.html
@@ -22,6 +22,7 @@
     </div>
     <div class="content">
       <header>Mot de passe</header>
+      <p>Physique | 3ème Année Secondaire </p>
     </div>
     <form>
       <div class="field">
