--- a/Génie Electrique 2as/Ps.html
+++ b/Génie Electrique 2as/Ps.html
@@ -22,6 +22,7 @@
     </div>
     <div class="content">
       <header>Mot de passe</header>
+      <p>Génie Electrique | 2ème Année Secondaire </p>
     </div>
     <form>
       <div class="field">
