--- a/Génie Electrique 3as/GE_3AS_SDC.html
+++ b/Génie Electrique 3as/GE_3AS_SDC.html
@@ -74,7 +74,33 @@
                         <p>Devoirs du 1er trimestre</p>
                     </div>
                 </div>
+                <div class="text_Cour">
+                    <div>
+                        <p> Premier devoir:</p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
                 <div class="pdf_Cour">
+                    <a href="Devoir/1tr/Devoir1.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p> Devoir 2018-2019 et corrigé type</p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p> Deuxième devoir:</p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Devoir/1tr/Devoir2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p> Devoir 2019-2020 et corrigé type </p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
