--- a/Home.html
+++ b/Home.html
@@ -148,6 +148,34 @@
     </div>
     <hr>
 
+    <div id="html2">
+        <a href="Licence/L3.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h2>Informatique</h2>
+					<p>Systèmes Informatiques</p>
+                    <p>Licence 3 | Semestre 5</p>
+                </div>
+                <div class="image_C">
+                    <img src="" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
+		<a href="Licence/L3.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h2>Informatique</h2>
+					<p>Systèmes Informatiques</p>
+                    <p>Licence 3 | Semestre 6</p>
+                </div>
+                <div class="image_C">
+                    <img src="" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
+    </div>
+    <hr>
+
     
     
     <footer>
