--- a/Home.html
+++ b/Home.html
@@ -149,7 +149,7 @@
     <hr>
 
     <div id="html2">
-        <a href="Licence/L3.html">
+        <a href="Licence/L3S5.html>
             <div class="html2_C">
                 <div class="text_C">
                     <h2>Informatique</h2>
@@ -161,7 +161,7 @@
                 </div>
             </div>
         </a>
-		<a href="Licence/L3.html">
+		<a href="#">
             <div class="html2_C">
                 <div class="text_C">
                     <h2>Informatique</h2>
