--- a/Licence/L3S5/L3_Com.html
+++ b/Licence/L3S5/L3_Com.html
@@ -15,7 +15,7 @@
     <div id="html1">
         <div class="html_C1">
             <div class="image_C1">
-                <img src="../Camera/IMG-7330.jpg" alt="Image circulaire">
+                <img src="../../Camera/IMG-7330.jpg" alt="Image circulaire">
             </div>
             <div class="text_C1">
                 <p> By Midou bnk </p>
@@ -24,10 +24,10 @@
         </div>
         <div class="html_C2">
             <div class="text_C2">
-                <a href="../L3.html">
+                <a href="../L3S5.html">
                     <i class="fa-solid fa-share fa-flip-horizontal" style="color: #f7f7f7;"></i>
                 </a>
-                <a href="../L3.html">
+                <a href="../../Home.html">
                     <i class="fa-solid fa-house fa-fade" style="color: #ffffff;"> </i>
                 </a>
             </div>
