--- a/Licence/L3S5.html
+++ b/Licence/L3S5.html
@@ -16,7 +16,7 @@
     <div id="html1">
         <div class="html_C1">
             <div class="image_C1">
-                <img src="Camera/IMG-7330.jpg" alt="Image circulaire">
+                <img src="IMG-7330.jpg" alt="Image circulaire">
             </div>
             <div class="text_C1">
                 <p> By Midou bnk </p>
@@ -24,7 +24,7 @@
         </div>
         <div class="html_C2">
             <div class="text_C1">
-                <a href="#">
+                <a href="../Home.html">
                     <i class="fa-solid fa-house fa-fade" style="color: #000000;"></i>
                 </a>
             </div>
