--- a/Home.html
+++ b/Home.html
@@ -149,7 +149,7 @@
     <hr>
 
     <div id="html2">
-        <a href="Licence/L3S5.html>
+        <a href="Licence/L3S5.html">
             <div class="html2_C">
                 <div class="text_C">
                     <h2>Informatique</h2>
@@ -157,7 +157,7 @@
                     <p>Licence 3 | Semestre 5</p>
                 </div>
                 <div class="image_C">
-                    <img src="" alt="Image circulaire">
+                    <img src="Camera/IMG-7339.JPG" alt="Image circulaire">
                 </div>
             </div>
         </a>
@@ -169,7 +169,7 @@
                     <p>Licence 3 | Semestre 6</p>
                 </div>
                 <div class="image_C">
-                    <img src="" alt="Image circulaire">
+                    <img src="Camera/IMG-7339.JPG" alt="Image circulaire">
                 </div>
             </div>
         </a>
