--- a/Home.html
+++ b/Home.html
@@ -145,8 +145,10 @@
                 </div>
             </div>
         </a> 
-        <hr>
-        
+    </div>
+    <hr> 
+    
+    <div id="html2">
         <a href="Licence/L3S5.html">
             <div class="html2_C">
                 <div class="text_C">
