--- a/Licence/L2S4.html
+++ b/Licence/L2S4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Licence-S</title>
+    <title>Licence2-S4</title>
     <link rel="stylesheet" href="Home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -37,16 +37,28 @@
         <a href="#">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2></h2>
-                    <p> Licence  | Semestre </p>
+                    <h3>Programmation orientée objet</h2>
+                    <p></p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="" alt="Image circulaire">
+                    <img src="../Camera/Java.PNG" alt="Image circulaire">
                 </div>
             </div>
         </a>
 
+        <a href="#">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h3>Développement Web</h2>
+                    <p> Licence  | Semestre </p>
+                    <i class="fa-solid fa-key fa-shake" style="color: #ffffff;"></i>
+                </div>
+                <div class="image_C">
+                    <img src="../Camera/Devweb.jpg" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
         <a href="#">
             <div class="html2_C">
                 <div class="text_C">
