--- a/Licence/L2S4.html
+++ b/Licence/L2S4.html
@@ -34,7 +34,7 @@
     <hr>
         
     <div id="html2">
-        <a href="#">
+        <a href="L2S4/POO.html">
             <div class="html2_C">
                 <div class="text_C">
                     <h3>Programmation orientée objet</h2>
