--- a/Licence/L2S4/POO.html
+++ b/Licence/L2S4/POO.html
@@ -38,6 +38,8 @@
         <div class="text_h2_C2">
             <p>Programmation orientée objet</p>
             <p>Licence 2| Semestre 4 </p>
+            <img src="../../Camera/Java-Logo.jpg" alt="Image circulaire">
+
         </div>
         <div class="Cours_C2">
             <div class="Cour">
