--- a/Licence/L2S4.html
+++ b/Licence/L2S4.html
@@ -37,7 +37,8 @@
         <a href="L2S4/POO.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h4>Programmation orientée objet</h2>
+                    <h3>Programmation</h3>
+                    <h3>orientée objet</h3>
                     <p></p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
