--- a/Licence/L1S2.html
+++ b/Licence/L1S2.html
@@ -16,7 +16,7 @@
     <div id="html1">
         <div class="html_C1">
             <div class="image_C1">
-                <img src="IMG-7330.jpg" alt="Image circulaire">
+                <img src="../Camera/IMG-7330.jpg" alt="Image circulaire">
             </div>
             <div class="text_C1">
                 <p> By Midou bnk </p>
