--- a/Génie Electrique 3as/GE_3AS_SDC.html
+++ b/Génie Electrique 3as/GE_3AS_SDC.html
@@ -81,6 +81,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Devoir/1tr/Devoir3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Devoir 2019-2020 et corrigé type</p>                   
+                    </a>
                     <a href="Devoir/1tr/Devoir1.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p> Devoir 2018-2019 et corrigé type</p>                   
