--- a/Génie Electrique 3as/GE_3AS_SDC.html
+++ b/Génie Electrique 3as/GE_3AS_SDC.html
@@ -119,6 +119,18 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Examen 1tr/Examen1.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen 1 avec solution </p>                   
+                    </a>
+                    <a href="Examen 1tr/Examen2.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen 2 avec solution </p>                   
+                    </a>
+                    <a href="Examen 1tr/Examen3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen 3 avec solution </p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
