--- a/Physique 1as/PH_1AS_SEX.html
+++ b/Physique 1as/PH_1AS_SEX.html
@@ -76,6 +76,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Examen tr1/2024-2023-T1-2-com-001-1AS.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen 2023-2024 avec solution</p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
