--- a/Licence/L3S5.html
+++ b/Licence/L3S5.html
@@ -48,11 +48,11 @@
             </div>
         </a>
 
-        <a href="L3S5/L3_Com.html">
+        <a href="L3S5/Comp.html">
             <div class="html2_C">
                 <div class="text_C">
                     <h2>Compilation</h2>
-                    <p></p>
+                    <p> Licence 3 | Semestre 5 </p>
                     <i class="fa-solid fa-key fa-shake" style="color: #ffffff;"></i>
                 </div>
                 <div class="image_C">
