--- a/Licence/L3S5.html
+++ b/Licence/L3S5.html
@@ -66,10 +66,10 @@
                 <div class="text_C">
                     <h2>Génie logiciel</h2>
                     <p> Licence 3 | Semestre 5 </p>
-                    <i class="fa-solid fa-key fa-shake" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="Camera/IMG-7335.JPG" alt="Image circulaire">
+                    <img src="../Camera/Gl3l.jpg.jpg" alt="Image circulaire">
                 </div>
             </div>
         </a>
