--- a/Licence/L3S5/GL.html
+++ b/Licence/L3S5/GL.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="GL/chap1 Introduction.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Introduction</p>                   
                     </a>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="GL/chap2 modélisation avec UML.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Introduction UML</p>                   
                     </a>
@@ -80,11 +80,11 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="GL/chap3 cas dutilisation.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Diagramme de cas d'utilisation</p>                   
                     </a>
-                    <a href="">
+                    <a href="GL/Série1.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD N°1: Diagramme de cas d’utilisation</p>                   
                     </a>
@@ -98,11 +98,11 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="GL/chapitre4 diagramme de classe.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Diagramme de classe</p>                   
                     </a>
-                    <a href="">
+                    <a href="GL/Série 2.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD N°2: Diagramme de classe</p>                   
                     </a>
@@ -116,15 +116,15 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="GL/chapitre5 OCL.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Langage OCL</p>                   
                     </a>
-                    <a href="">
+                    <a href="GL/TD collectif GL.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD en cours</p>                   
                     </a>
-                    <a href="">
+                    <a href="GL/serie td 3.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD N°3: OCL</p>                   
                     </a>
@@ -138,11 +138,11 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="GL/chapitre 6 diagramme vue dynamique.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Vue dynamique des diagramme UML</p>                   
                     </a>
-                    <a href="">
+                    <a href="GL/S+®rie TD 3.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD N°3: Diagrammes d’Activités/Séquence</p>                   
                     </a>
@@ -156,11 +156,11 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="GL/chap 7 diagramme de déploiment.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Diagrammes de composants et Diagrammes de déploiement</p>                   
                     </a>
-                    <a href="">
+                    <a href="GL/S+®rie TD 4.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD N°4: Diagramme de Etat-transition / Collaboration
                             Composant / Déploiement </p>                   
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="">
+                    <a href="GL/chapitre 8 rup XP.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Introduction aux méthodes de développement:(RUP, XP)</p>                   
                     </a>
