--- a/Licence/L3S5.html
+++ b/Licence/L3S5.html
@@ -57,7 +57,7 @@
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="" alt="Image circulaire">
+                    <img src="../Camera/SE.jpg" alt="Image circulaire">
                 </div>
             </div>
         </a>
@@ -84,7 +84,7 @@
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
                 <div class="image_C">
-                    <img src="" alt="Image circulaire">
+                    <img src="../Camera/IHM.PNG" alt="Image circulaire">
                 </div>
             </div>
         </a>
