--- a/Licence/L3S5.html
+++ b/Licence/L3S5.html
@@ -78,8 +78,8 @@
         <a href="L3S5/IHM.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2>Interface </h2>
-                    <h2>Homme Machine</h2>
+                    <h2>Interface Homme</h2>
+                    <h2>Machine</h2>
                     <p> Licence 3 | Semestre 5 </p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
