--- a/Physique 3as/PH_3AS_SE.html
+++ b/Physique 3as/PH_3AS_SE.html
@@ -96,6 +96,22 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Séries/Ch2S1.pdf">
+                        <p>شرح حركة كوكب أو قمر اصطناعي</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Séries/Ch2S2.pdf">
+                        <p>دراسة حركة السقوط الشاقولي لجسم صلب في الهواء</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Séries/Ch2S3.pdf">
+                        <p>دراسة حركة القديفة</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Séries/Ch2S4.pdf">
+                        <p>دراسة الحركة على المستوي الأفقي والمائل</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
